<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/avgSystolic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/avgDiastolic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/avgCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <EditText
        android:id="@+id/editTextUserId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintUserId"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextSystolicReading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintSystolicReading"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editTextDiastolicReading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintDiastolicReading"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/btnAdd" />

    <ListView
        android:id="@+id/lvBloodPressure"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>
